--- a/statistics.html
+++ b/statistics.html
@@ -96,12 +96,12 @@ presenting statistical data; and providing technical advice and assistance to?..
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://expedia.wd5.myworkdayjobs.com/search/job/USA---Washington---Bellevue/Sr-Statistician_R-42979?source=BuiltInSeattle'>Sr Statistician</a></h5> 
+<h5><a href='https://expedia.wd5.myworkdayjobs.com/search/job/USA---Washington---Bellevue/Sr-Statistician_R-42979?source=BuiltInSeattle'>Sr Statistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Each of these marketing channels center around a rich central problem from 
 deriving value from sparse data to auction theory and game theory all with the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
+<h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">North Carolina, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -197,7 +197,7 @@ at BAME Recruitment Limited.</p>
 <p>2 days ago ... Senior Statistical Programmer. Overview: Provides statistical programming 
 support for the implementation of data models and the reporting of clinical trials?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=obqM9fwg&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n95qPKwI'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=obqM9fwg&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n95qPKwI'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Madrid</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
@@ -249,7 +249,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oprAafwk'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oprAafwk'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -291,7 +291,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/BACFDAE38A'>Statistics &amp; Data Corporation (SDC) - Jobs: Manager, Statistical Programming - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/BACFDAE38A'>Statistics &amp; Data Corporation (SDC) - Jobs: Manager, Statistical Programming - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -303,7 +303,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light"></span></p>
 <p>Jul 5, 2019 ... Apply online for the job of Biostatistician at Statistics & Data Corporation (SDC)</p>
 <hr/>
-<h5><a href='https://medtronic.referrals.selectminds.com/jobs/63990'>Principal Statistician - Medtronic Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medtronic.referrals.selectminds.com/jobs/63990'>Principal Statistician - Medtronic Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Careers That Change Lives The Principal Statistician will be responsible for 
 statistical aspects of study design and analysis of data from complex...</p>
@@ -378,7 +378,7 @@ standards (ADaM) and a good understanding of conversion data structure?...</p>
 <p>Jul 9, 2019 ... Celerion is looking for a Biostatistician to join our global Data Management and 
 Biometrics team in Belfast, Northern Ireland. This role is responsible for the?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ultragenyx/14c02ece-2b6f-47be-8c7d-db186ea05893'>Ultragenyx Pharmaceutical Inc. - Associate Director, Biostatistics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ultragenyx/14c02ece-2b6f-47be-8c7d-db186ea05893'>Ultragenyx Pharmaceutical Inc. - Associate Director, Biostatistics</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -398,7 +398,7 @@ Biometrics team in Belfast, Northern Ireland. This role is responsible for the?.
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/5BB61A45C8'>Statistics &amp; Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/5BB61A45C8'>Statistics &amp; Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -412,7 +412,7 @@ your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read?...</p>
 <p>5 days ago ... Experience with Bayesian methods. ? Experience of statistical programming (e.g., 
 in SAS, R, Python). ? Experience with CDISC data format (SDTM and ADAM).</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/grailbio/c277b1a5-1ff7-49f9-9af5-e4e120c5b46f'>GRAIL - Senior/Staff Assay Biostatistician</a></h5> 
+<h5><a href='https://jobs.lever.co/grailbio/c277b1a5-1ff7-49f9-9af5-e4e120c5b46f'>GRAIL - Senior/Staff Assay Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
@@ -437,7 +437,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/system1/35ce88c9-5222-4c39-aa8e-0ad2c7e900a4'>System1 - Principal Data Scientist - Statistician</a></h5> 
+<h5><a href='https://jobs.lever.co/system1/35ce88c9-5222-4c39-aa8e-0ad2c7e900a4'>System1 - Principal Data Scientist - Statistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
